// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdvancedDetails /> does not render component for advanced transaction details 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--background-color-background-default mm-box--rounded-md"
  >
    <div
      class="mm-box mm-box--padding-2"
    >
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
        style="overflow-wrap: anywhere; min-height: 24px;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Nonce
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-1"
              class=""
              data-original-title="This is the transaction number of an account. Nonce for the first transaction is 0 and it increases in sequential order."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            undefined
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdvancedDetails /> renders component for advanced transaction details 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--background-color-background-default mm-box--rounded-md"
  >
    <div
      class="mm-box mm-box--padding-2"
    >
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
        style="overflow-wrap: anywhere; min-height: 24px;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Nonce
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-2"
              class=""
              data-original-title="This is the transaction number of an account. Nonce for the first transaction is 0 and it increases in sequential order."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            12
          </p>
          <button
            aria-label="Edit"
            class="mm-box mm-button-icon mm-button-icon--size-lg edit-nonce-btn mm-box--margin-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent mm-box--rounded-lg"
          >
            <span
              class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/edit.svg');"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="mm-box mm-box--width-full mm-box--border-color-border-muted mm-box--border-width-1 box--border-style-solid"
    />
    <div
      class="mm-box mm-box--padding-2"
    >
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--color-text-default mm-box--rounded-lg"
        style="overflow-wrap: anywhere; min-height: 24px;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Hex
          </p>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            0xd0e30db0
          </p>
        </div>
      </div>
      <div>
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-link mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
        >
          <span
            class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/copy.svg');"
          />
          Copy raw transaction data
        </button>
      </div>
    </div>
  </div>
</div>
`;
